2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/VideoView.cs: minor correction
	* Banter/ChatWindowManager.cs: Changed ShowAll to Present
	* Banter/ChatWindow.cs: Fixed the way the window was connecting up the
	  stream... well, when it did it

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/ConversationManager.cs,
	  Banter/Conversation.cs, Banter/ChatWindow.cs: debug messages

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: updated sizing of internal widgets (hacked a
	  bit)

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	oops, forgot to call the IncomingConversation event

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	ADded debug to know when new conversation came in

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: addedo object path in Conversation
	  constructors
	* Banter/ConversationManager.cs: send in object path for conversation
	  constructors

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Added handlers for new channels on
	  conversations and changed to the new StartAudioVideoStream method

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: filled out StartAudioVideoStream method

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter.mds: Removed old projects that were causing build
	  issues
	* Banter/Theme.cs, Banter/Presence.cs, Banter/Person.cs,
	  Banter/ContactStyle.cs, Banter/PersonCard.cs, Banter/PersonView.cs:
	  removed build warnings
	* Banter/ChatWindowManager.cs: Handles incoming conversations
	* Banter/Application.cs:  removed old code that was hacked in so I
	  hacked it back out
	* Banter/ChatWindow.cs: Added code to deal with new chat windows
	  initiated by a peer
	* Banter/GroupWindow.cs: fixed build warnings
	* Banter/AppStyle.cs: removed a ton of build warnings

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
