@@ -1,3 +1,7 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	call the Close method on all outstanding channels
+
 2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/VideoView.cs: minor correction
